translate SSP main title

--- a/locales/en/LC_MESSAGES/educ.po
+++ b/locales/en/LC_MESSAGES/educ.po
@@ -1,3 +1,6 @@
+msgid "Authentication Service"
+msgstr "Authentication Service"
+
 msgid "Select your home university or national federation"
 msgstr "Select your home university or national federation"
 
