--- a/locales/hu/LC_MESSAGES/educ.po
+++ b/locales/hu/LC_MESSAGES/educ.po
@@ -1,3 +1,6 @@
+msgid "Authentication Service"
+msgstr "Azonosítási szolgáltatás"
+
 msgid "Select your home university or national federation"
 msgstr "Válassza ki az anyaintézményét"
 
